# Decision

./: .gitignore  README.md  gps_get.py  mid_presentation.md  rrt_test.txt  single_gps_path_following_plan.md  이해해보자.txt
bag/rosbag2_2026_03_14-16_23_49/: metadata.yaml  rosbag2_2026_03_14-16_23_49_0.db3
config/path_csv/: gongD131.csv  gongD_back.csv  rosbag2_2026_03_14-16_23_49.csv  rosbag2_2026_03_29-17_44_57.csv  rosbag2_2026_03_30.csv
src/GPS/: README.md
src/GPS/gps_to_utm/config/: tf_gps_csv.yaml
src/arduino/: GP_arduino.ino
src/arduino/serial_bridge/: package.xml  setup.py
src/arduino/serial_bridge/serial_bridge.egg-info/: PKG-INFO  (+2 more)
src/comm/: .gitignore  README.md
src/comm/docs/: architecture_block_diagram.html  bringup_launch_contract.md  map_tf_relative_fusion_notes.md  outdoor_rtk_platooning_foundation.md
src/comm/platoon_bringup/: package.xml  setup.cfg  setup.py
src/comm/platoon_bringup/config/: cyclonedds_internal_loopback.xml  svdp_follower_30_20.yaml  svdp_leader_10_to_30.yaml
src/comm/platoon_bringup/launch/: follower.launch.py  follower_bringup.launch.py  leader.launch.py  leader_bringup.launch.py  leader_v2v.launch.py  leader_v2v_bridge.launch.py
src/comm/platoon_bringup/platoon_bringup/: svdp_runtime.py
src/comm/platoon_interfaces/: CMakeLists.txt  package.xml
src/comm/platoon_localization/: package.xml  setup.cfg  setup.py
src/comm/platoon_v2v/: package.xml  setup.cfg  setup.py
src/comm/platoon_v2v/config/: follower_v2v.yaml  leader_v2v.yaml
src/comm/platoon_v2v/launch/: follower_v2v.launch.py  leader_v2v.launch.py
src/comm/platoon_v2v/platoon_v2v/: __init__.py  fake_leader_motion_node.py  follower_reference_path_adapter_node.py  follower_v2v_receiver_node.py  leader_preview_path_node.py  leader_reference_path_relay_node.py  leader_v2v_adapter_node.py  speed_resolution.py  telemetry_protocol.py
src/comm/platoon_v2v/test/: test_copyright.py  test_flake8.py  test_pep257.py  test_speed_resolution.py  test_telemetry_protocol.py
src/gps/: README.md
src/gps/gps_to_utm/: CMakeLists.txt  package.xml
src/gps/um980_driver/: package.xml  readme.md  setup.cfg  setup.py
src/gps/um980_msgs/: CMakeLists.txt  package.xml
src/leader/auto_drive/: package.xml  setup.py
(+112 files in other folders)
